# flowtrack

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_tasks_table.py  003_add_task_comments.py  004_add_config_encrypted.py
flowtrack/: main.py
flowtrack/cli/: block.py  config.py  deploy.py  dev.py  incident.py  interrupt.py  log.py  report.py  review.py  status.py  sync.py  task.py  test_cmd.py
flowtrack/core/: credentials.py  crypto.py  database.py  exceptions.py  settings.py
flowtrack/integrations/: github_client.py  jira_client.py
flowtrack/models/: __init__.py  base.py  config.py  deployment.py  event.py  incident.py  session.py  task.py  task_comment.py
flowtrack/repositories/: config_repo.py  deployment_repo.py  event_repo.py  incident_repo.py  session_repo.py  task_comment_repo.py  task_repo.py
flowtrack/services/: config_service.py  deploy_service.py  event_service.py  incident_service.py  report_service.py  session_service.py  sync_service.py  task_service.py
scripts/: setup.ps1  setup.sh
tests/: conftest.py
tests/unit/: test_event_service.py  test_report_service.py  test_session_service.py
