[project]
name = "flowtrack"
version = "0.1.0"
description = "CLI for capturing SPACE + DORA productivity metrics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "sqlalchemy[postgresql]>=2.0.0",
    "alembic>=1.14.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "cryptography>=44.0.0",
]

[project.scripts]
flowtrack = "flowtrack.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
